fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Bootstrap v4.3.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -64,7 +58,9 @@ nav,
 section {
   display: block;
 }
-
+/* *{
+  border: 1px solid red;
+} */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -77,7 +73,6 @@ body {
   text-align: left;
   background-color: #fff;
   scroll-behavior: smooth;
-  
 }
 
 [tabindex="-1"]:focus {
